@@ -4,7 +4,7 @@
 return array(
 	// this is displayed in the header section
 	'title'=>'My Yii Blog',
-	// this is used in contact page
+	// this is used in error pages
 	'adminEmail'=>'webmaster@example.com',
 	// number of posts displayed per page
 	'postsPerPage'=>10,
